idp/dependencies/keycloak/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "self-signed-cluster-issuer"
  name: keycloak-ui
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.cnoe.localtest.me
      secretName: keycloak-cert
